@@ -95,7 +95,7 @@ wxPoint       hb_par_wxPoint( int param );
 wxSize        hb_par_wxSize( int param );
 wxArrayString hb_par_wxArrayString( int param );
 
-void          wxh_ItemListDel_WX( wxObject* wxObj );
+void          wxh_ItemListDel_WX( wxObject* wxObj, bool bDeleteWxObj = false );
 wxh_Item*     wxh_ItemListGet_PWXH_ITEM( wxObject* wxObj );
 wxh_Item*     wxh_ItemListGet_PWXH_ITEM( PHB_ITEM pSelf );
 PHB_ITEM      wxh_ItemListGet_HB( wxObject* wxObj );
