@@ -27,6 +27,7 @@ RETURN NIL
 */
 CLASS MyApp FROM wxApp
 PRIVATE:
+  DATA bz INIT {NIL,NIL,NIL}
 PROTECTED:
 PUBLIC:
   METHOD OnInit
@@ -77,12 +78,14 @@ METHOD FUNCTION OnInit() CLASS MyApp
     ENDMENU
   ENDMENU
 
-  BEGIN BOXSIZER VERTICAL
+  AltD()
+
+  BEGIN BOXSIZER VERTICAL //VAR ::bz[1]
     @ BROWSE VAR b DATASOURCE a ;
       SIZERINFO ALIGN EXPAND STRETCH
-    BEGIN BOXSIZER VERTICAL "" ALIGN EXPAND
+    BEGIN BOXSIZER VERTICAL "" ALIGN EXPAND VAR ::bz[2]
       @ GET text VAR textCtrl MULTILINE SIZERINFO ALIGN EXPAND STRETCH
-      BEGIN BOXSIZER HORIZONTAL
+      BEGIN BOXSIZER HORIZONTAL VAR ::bz[3]
         @ BUTTON "GoTop" ACTION b:GoTop()
         @ BUTTON "GoBottom" ACTION b:GoBottom()
         @ BUTTON "PgUp" ACTION b:PageUp()
@@ -102,7 +105,7 @@ METHOD FUNCTION OnInit() CLASS MyApp
 
   b:AddAllColumns()
 
-  @ STATUSBAR
+//   @ STATUSBAR
 
   SHOW WINDOW oWnd CENTRE
 
